<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>group2_rwa5</name>
  <version>0.0.0</version>
  <description> This package defines the following nodes: WaypointPublisher, which publishes a
    sequence of three waypoints, and WaypointReacher, which receives the target waypoints and guides
    the robot to the targets using a proportional controller </description>
  <maintainer email="anvpran@gmail.com">pranavanv</maintainer>
  <maintainer email="pranavdeshakulkarni@gmail.com">pranavdm</maintainer>
  <maintainer email="lakshmipravallika.adibhatla@gmail.com">lakshmipravallikaa</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>bot_waypoint_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>